1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

Wed Feb 18 16:12:43 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trialing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Wed Feb  5 10:37:00 1996  Richard Basch  <basch@lehman.com>

	* g_accept_sec_context.c g_acquire_cred.c g_compare_name.c
	  g_context_time.c g_delete_sec_context.c g_dsp_name.c
	  g_dsp_status.c g_exp_sec_context.c g_imp_name.c
	  g_imp_sec_context.c g_indicate_mechs.c g_init_sec_context.c
	  g_inq_context.c g_inq_cred.c g_inq_names.c g_process_context.c
	  g_rel_buffer.c g_rel_cred.c g_rel_name.c g_rel_oid_set.c
	  g_seal.c g_sign.c g_unseal.c g_verify.c
		Changed INTERFACE keyword to KRB5_CALLCONV

Mon Nov 18 20:43:54 1996  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Shared library version number to 1.0. [krb5-libs/201]

Wed Jun 12 00:50:32 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Remove include of config/windows.in; that's done
		automatically by wconfig.

	* g_acquire_cred.c, g_oid_ops.c: Change to use new convention of
		KRB5_CALLCONV and KRB5_DLLIMP instead of INTERFACE

Wed May 22 07:48:21 1996  Sam Hartman  <hartmans@mit.edu>

	* Makefile.in (libgssapi.$(STEXT)): Remove unnecessary install rule for libgssapi.a.

Mon May 20 23:56:46 1996  Sam Hartman  <hartmans@mit.edu>

	* configure.in: Don't make libgssapi.a on AIX.  It is handled incorrectly becaus all symbols are not resolved, and it isn't useful as a non-shared library.
	

Fri May  3 16:43:43 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* g_inq_cred.c (gss_inquire_cred): Add code to support appropriate
		behavior when the input credentials is NULL (i.e., the
		default credential).  We use the default credential for