@@ -31,7 +31,7 @@
 
 extern gss_mechanism *__gss_mechs_array;
 
-KRB5_DLLIMP OM_uint32 KRB5_CALLCONV
+GSS_DLLIMP OM_uint32 KRB5_CALLCONV
 gss_release_oid(minor_status, oid)
     OM_uint32	*minor_status;
     gss_OID	*oid;
@@ -60,7 +60,7 @@ gss_release_oid(minor_status, oid)
     return generic_gss_release_oid(minor_status, oid);
 }
 
-KRB5_DLLIMP OM_uint32 KRB5_CALLCONV
+GSS_DLLIMP OM_uint32 KRB5_CALLCONV
 gss_create_empty_oid_set(minor_status, oid_set)
     OM_uint32	*minor_status;
     gss_OID_set	*oid_set;
@@ -68,7 +68,7 @@ gss_create_empty_oid_set(minor_status, oid_set)
 	return generic_gss_create_empty_oid_set(minor_status, oid_set);
 }
 
-KRB5_DLLIMP OM_uint32 KRB5_CALLCONV
+GSS_DLLIMP OM_uint32 KRB5_CALLCONV
 gss_add_oid_set_member(minor_status, member_oid, oid_set)
     OM_uint32	*minor_status;
     gss_OID	member_oid;
@@ -77,7 +77,7 @@ gss_add_oid_set_member(minor_status, member_oid, oid_set)
      return generic_gss_add_oid_set_member(minor_status, member_oid, oid_set);
 }
 
-KRB5_DLLIMP OM_uint32 KRB5_CALLCONV
+GSS_DLLIMP OM_uint32 KRB5_CALLCONV
 gss_test_oid_set_member(minor_status, member, set, present)
     OM_uint32	*minor_status;
     gss_OID	member;
@@ -87,7 +87,7 @@ gss_test_oid_set_member(minor_status, member, set, present)
     return generic_gss_test_oid_set_member(minor_status, member, set, present);
 }
 
-KRB5_DLLIMP OM_uint32 KRB5_CALLCONV
+GSS_DLLIMP OM_uint32 KRB5_CALLCONV
 gss_oid_to_str(minor_status, oid, oid_str)
     OM_uint32		*minor_status;
     gss_OID		oid;
@@ -96,7 +96,7 @@ gss_oid_to_str(minor_status, oid, oid_str)
     return generic_gss_oid_to_str(minor_status, oid, oid_str);
 }
 
-KRB5_DLLIMP OM_uint32 KRB5_CALLCONV
+GSS_DLLIMP OM_uint32 KRB5_CALLCONV
 gss_str_to_oid(minor_status, oid_str, oid)
     OM_uint32		*minor_status;
     gss_buffer_t	oid_str;
